--- a/.github/workflows/buildAPI.yaml
+++ b/.github/workflows/buildAPI.yaml
@@ -15,7 +15,7 @@ jobs:
            echo "=============="
            cd geoBoundaries
            echo "=============="
-           git sparse-checkout init *.csv
+           git sparse-checkout init "*.csv"
            git checkout 
    
     - name: Clone the website repository
