--- a/.github/workflows/buildAPI.yaml
+++ b/.github/workflows/buildAPI.yaml
@@ -17,6 +17,7 @@ jobs:
            cd geoBoundaries
            echo "=============="
            git sparse-checkout init "*.csv"
+           git sparse-checkout add "releaseData/geoBoundariesOpen-meta.csv"
            git checkout 
    
     - name: Clone the website repository
