--- a/.github/workflows/buildAPI.yaml
+++ b/.github/workflows/buildAPI.yaml
@@ -48,3 +48,12 @@ jobs:
            ls
            pwd
            git status
+           git config --local user.email "danr@wm.edu"
+           git config --local user.name "DanRunfola"
+           git add -A .
+           git remote set-url origin https://x-access-token:${{ secrets.DRTOKEN }}@github.com/$GITHUB_REPOSITORY
+           git diff-index --quiet HEAD || git commit -m "geoBoundary Status and Build Script"
+           git status
+           git push origin main 
+
+
