--- a/.github/workflows/buildAPI.yaml
+++ b/.github/workflows/buildAPI.yaml
@@ -5,7 +5,7 @@ on:
   
 name: buildAPI
 jobs:
-  csvBuild:
+  buildAPI:
     runs-on: ubuntu-latest
     container: docker://geogdan/geoboundaries:A
     steps:        
