--- a/.github/workflows/pushAPI.yml
+++ b/.github/workflows/pushAPI.yml
@@ -10,15 +10,8 @@ jobs:
       run: |
            cd $GITHUB_WORKSPACE
            cd ..
-           rm -r geoBoundaries
-           git clone --filter=blob:none --no-checkout https://github.com/wmgeolab/geoBoundaries
-           echo "=============="
-           cd geoBoundaries
-           echo "=============="
-           git sparse-checkout set "api/"
-           git sparse-checkout add ".gitattrbutes"
-           git sparse-checkout add ".gitignore"
-           git checkout 
+           rm -r gbWeb
+           git clone https://github.com/wmgeolab/gbWeb
              
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
