--- a/.github/workflows/pushAPI.yml
+++ b/.github/workflows/pushAPI.yml
@@ -20,4 +20,4 @@ jobs:
         ftp-username: geologs
         ftp-password: ${{ secrets.FTP_PASSWORD }}
         local-dir: api
-        git-ftp-args: --dry-run
+        #git-ftp-args: --dry-run
