--- a/.github/workflows/buildWebDownloads.yaml
+++ b/.github/workflows/buildWebDownloads.yaml
@@ -11,6 +11,8 @@ jobs:
       run: |
            cd $GITHUB_WORKSPACE
            cd ..
+           cd ..
+           rm gbWeb
            ls
            git clone https://github.com/wmgeolab/geoBoundaryBot
    
@@ -27,7 +29,7 @@ jobs:
            echo "==============================================="
            mkdir ~/tmp 
            mkdir ~/artifacts
-           python assets/python/statusTable.py
+           python gbWeb/assets/python/statusTable.py
            
     #- name: Commit Files
     #  env:
