--- a/.github/workflows/buildWebDownloads.yaml
+++ b/.github/workflows/buildWebDownloads.yaml
@@ -11,8 +11,6 @@ jobs:
       run: |
            cd $GITHUB_WORKSPACE
            cd ..
-           cd ..
-           rm -rf gbWeb
            ls
            git clone https://github.com/wmgeolab/geoBoundaryBot
    
@@ -27,9 +25,9 @@ jobs:
     - name: Build JSON
       run: |
            echo "==============================================="
-           mkdir ~/tmp 
-           mkdir ~/artifacts
-           python gbWeb/assets/python/statusTable.py
+           ls
+           pwd
+           python assets/python/statusTable.py
            
     #- name: Commit Files
     #  env:
