--- a/.github/workflows/pushAPI.yml
+++ b/.github/workflows/pushAPI.yml
@@ -1,8 +1,7 @@
-on:
-  schedule:
-    - cron: '0 23 * * *'
+on: 
+  workflow_dispatch
     
-name: DeployAPI
+name: DeploySite
 jobs:
   FTP-Deploy-Action:
     name: FTP-Deploy-Action
