--- a/.github/workflows/pushAPI.yml
+++ b/.github/workflows/pushAPI.yml
@@ -1,6 +1,7 @@
 on:
-  schedule:
-    - cron: '0 23 * * *'
+  workflow_dispatch
+  #schedule:
+    #- cron: '0 23 * * *'
     
 name: DeploySite
 jobs:
@@ -18,8 +19,9 @@ jobs:
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@4.1.0
       with:
-        server: ftp://ftp.geoboundaries.org/geoboundaries.org/api/
+        server: ftp://ftp.geoboundaries.org/
         username: geologs
         password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: geoboundaries.org/api/
         local-dir: api/
         #git-ftp-args: --dry-run
