--- a/.github/workflows/pushAPI.yml
+++ b/.github/workflows/pushAPI.yml
@@ -1,7 +1,6 @@
 on:
-  workflow_dispatch
-  #schedule:
-    #- cron: '0 23 * * *'
+  schedule:
+    - cron: '0 23 * * *'
     
 name: DeploySite
 jobs:
