--- a/.github/workflows/pushAPI.yml
+++ b/.github/workflows/pushAPI.yml
@@ -1,6 +1,7 @@
 on:
-  schedule:
-    - cron: '0 23 * * *'
+  workflow_dispatch
+#   schedule:
+#     - cron: '0 23 * * *'
     
 name: DeploySite
 jobs:
